# SongBloom_ComfyUI

./: DeepseekAP-config.json  README.md  __init__.py  config.yaml  debug_audio_save.py  debug_save_issue.py  install.py  pyproject.toml  requirements.txt  songbloom_nodes.py  verify_quality_features.py
.github/workflows/: publish.yml
SongBloom/: LICENSE  README.md  infer.py  infer.sh  requirements.txt  set_env.sh
SongBloom/SongBloom/g2p/: lyric_common.py
SongBloom/SongBloom/g2p/cn_zh_g2p/: __init__.py  chinese.py  english.py
SongBloom/SongBloom/g2p/pinyin/: __init__.py  pinyin.py
SongBloom/SongBloom/models/: transformer.py
SongBloom/SongBloom/models/base/: sample.py  utils.py
SongBloom/SongBloom/models/musicgen/: get_backend.py
SongBloom/SongBloom/models/musicgen/conditioners/: __init__.py  base.py  text.py  wav.py
SongBloom/SongBloom/models/musicgen/modules/: streaming.py
SongBloom/SongBloom/models/musicldm/: musicldm_dit.py
SongBloom/SongBloom/models/musicldm/inference/: sampling.py
SongBloom/SongBloom/models/songbloom/: songbloom_mvsa.py  songbloom_pl.py
SongBloom/SongBloom/models/vae_frontend/: __init__.py  autoencoders.py  bottleneck.py
SongBloom/docs/: lyric_format.md
SongBloom/example/: test.jsonl
example_workflows/: high_quality_generation.json
js/: SongBloomAudioPrompt.js  SongBloomPreviewAudio.js
js/components/: base.js  button.js  checkbox.js  slider.js  waveform.js
