[project]
name = "SongBloom_ComfyUI"
description = "SongBloom is a music generation plugin for ComfyUI that integrates the entire process of lyrics standardization, model loading, generation, saving, and previewing, and provides DeepSeek V3 assistance for lyric formatting."
version = "2.2.0"
license = {file = "LICENSE"}
dependencies = []

[project.urls]
Repository = "https://github.com/xuchenxu168/SongBloom_ComfyUI"
"Bug Tracker" = "https://github.com/xuchenxu168/SongBloom_ComfyUI/issues"
#  Used by Comfy Registry https://registry.comfy.org

[tool.comfy]
PublisherId = "xuchenxu168"
DisplayName = "SongBloom_ComfyUI"
Icon = ""
includes = []
